# djangocms-aldryn-forms

./: .bumpversion.cfg  CHANGELOG.rst  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
aldryn_forms/: action_backends.py  cms_forms_utils.py  cms_plugins.py  constants.py  fields.py  forms.py  helpers.py  models.py  utils.py  views.py  widgets.py
aldryn_forms/admin/: __init__.py  base.py  forms.py  options.py  utils.py
aldryn_forms/api/: main.py  mixin.py  permissions.py  serializers.py  urls.py  views.py  webhook.py
aldryn_forms/contrib/email_notifications/: cms_plugins.py
aldryn_forms/locale/cs/LC_MESSAGES/: django.po  djangojs.po
aldryn_forms/management/commands/: aldryn_forms_remove_expired_post_idents.py  aldryn_forms_send_emails.py  aldryn_forms_set_plugin_type.py
aldryn_forms/middleware/: handle_post.py
aldryn_forms/migrations/: 0017_alter_datefieldplugin_cmsplugin_ptr_and_more.py  0019_formsubmission_post_uuid_and_more.py  0019_submittedtobesent_formsubmission_post_uuid_and_more.py  0020_webook.py  0022_formplugin_redirect_to.py
aldryn_forms/static/aldryn_forms/css/: admin-form.css  admin-list.css
aldryn_forms/static/aldryn_forms/js/src/: admin-list.js  form.js  main.js
aldryn_forms/templates/admin/aldryn_forms/display/: submission_data.html  submission_display_fields.html
aldryn_forms/templates/admin/aldryn_forms/formsubmission/: change_list.html  webhook_form.html
aldryn_forms/templates/admin/aldryn_forms/webhook/: change_form.html
aldryn_forms/templates/aldryn_forms/: form.html
aldryn_forms/templates/aldryn_forms/widgets/: drag_and_drop_files.html
aldryn_forms/templatetags/: aldryn_forms_admin_tags.py  aldryn_forms_tags.py
tests/: settings.py  test_admin_base.py  test_api_views.py  test_api_webhook.py  test_cms_plugins.py  test_management_commands.py  test_models.py  test_templatetags_aldryn_forms_admin_tags.py  test_utils.py  test_views.py
