[metadata]
name = djangocms-aldryn-forms
author = Divio AG
author_email = info@divio.ch
version = attr: aldryn_forms.__version__
description = Create forms and embed them on CMS pages.
url = https://github.com/CZ-NIC/djangocms-aldryn-forms
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.9
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django-cms
    django-emailit
    django-filer
    django-formtools
    django-import-export
    django-sizefield
    django-tablib
    djangocms-attributes-field
    djangocms-text
    tablib
    Markdown
    Pillow
    easy-thumbnails[svg]
    requests
    djangorestframework
    django-filter
    jq
    jsonschema

[options.extras_require]
captcha = django-simple-captcha

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
exclude =
    *.egg-info,
    .eggs,
    .git,
    .settings,
    .tox,
    build,
    data,
    dist,
    docs,
    *migrations*,
    requirements,
    tmp

[isort]
line_length = 120
skip = manage.py, *migrations*, .tox, .eggs, data
include_trailing_comma = true
multi_line_output = 5
not_skip = __init__.py
lines_after_imports = 2
default_section = THIRDPARTY
sections = FUTURE, STDLIB, DJANGO, CMS, THIRDPARTY, FIRSTPARTY, LIB, LOCALFOLDER
known_first_party = aldryn_forms
known_cms = cms, menus
known_django = django

[compile_catalog]
domain = django djangojs
directory = aldryn_forms/locale
